<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPosts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/list_of_posts"
        android:clipToPadding="false"
        android:paddingBottom="72dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/filterIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="16dp"
        android:src="@drawable/filter"
        android:contentDescription="@string/filter"
        app:backgroundTint="@color/filter_fab_tint"
        app:fabSize="mini"
        app:maxImageSize="22dp"
        app:borderWidth="0dp"
        app:elevation="8dp"/>

    <TextView
        android:id="@+id/emptyState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_posts_found"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="gone"
        android:layout_gravity="center"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>