<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/black"/>

    <Spinner
        android:id="@+id/spinnerLocation"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/spinner_background" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/object_category"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/black"/>

    <Spinner
        android:id="@+id/spinnerObjectType"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/spinner_background" />
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnClear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear_filters"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/grey"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnApply"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apply"
            android:backgroundTint="@color/primary"
            android:textColor="@color/black" />
    </LinearLayout>
</LinearLayout>
