<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollRoot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/tvWelcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_back_title"
                    android:textColor="@color/black"
                    android:fontFamily="@font/quando_regular"
                    android:textSize="22sp"/>

                <TextView
                    android:id="@+id/tvAppName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-4dp"
                    android:text="@string/welcome_lostpals"
                    android:textColor="@color/black"
                    android:fontFamily="@font/quando_regular"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:gravity="end" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_title"
                        android:textColor="@color/black"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_username"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_marginBottom="8dp"/>

                    <EditText
                        android:id="@+id/etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/label_username"
                        android:textColor="@color/grey"
                        android:inputType="text"
                        android:padding="12dp"
                        android:textSize="14sp"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_password"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_marginBottom="8dp"/>
                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/bg_edittext"
                        android:hint="@string/label_password"
                        android:textColor="@color/grey"
                        android:inputType="textPassword"
                        android:padding="12dp"
                        android:textSize="14sp"
                        android:layout_marginBottom="20dp"/>

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:backgroundTint="@color/primary"
                        android:text="@string/btn_login"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:elevation="4dp"
                        app:cornerRadius="12dp"/>

                    <TextView
                        android:id="@+id/tvRegisterLink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/link_register"
                        android:textColor="@color/grey"
                        android:textSize="16sp"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>